moved try to context menu