@@ -16,6 +16,8 @@ version = "0.0.1"
 val distGroup = "dist"
 val distDir = "distributions"
 val appName = "Deskterminal"
+val launch4jStr = "launch4j"
+val appBuildDir = "$launch4jStr/$appName"
 val mainClassPath = "$group.$appName"
 
 repositories {
@@ -40,13 +42,15 @@ application {
 
 val copyJre = tasks.register<Copy>("copyJre") {
     from(projectDir.resolve("lib/jdk-17.0.13+11-jre"))
-    into(layout.buildDirectory.dir("$appName/jre"))
+    into(layout.buildDirectory.dir("$appBuildDir/jre"))
 }
 
 val launch4j = tasks.withType<DefaultLaunch4jTask> {
     mainClassName = mainClassPath
+    icon = projectDir.resolve("deskterminal.ico").absolutePath
     bundledJrePath = "jre"
-    outputDir = appName
+    outputDir = appBuildDir
+    jvmOptions.add("--add-opens java.desktop/sun.awt=ALL-UNNAMED")
 
     dependsOn(copyJre)
 }
@@ -54,7 +58,7 @@ val launch4j = tasks.withType<DefaultLaunch4jTask> {
 tasks.register<Zip>("zipBundledDist") {
     group = distGroup
 
-    from(layout.buildDirectory.dir(appName))
+    from(layout.buildDirectory.dir(launch4jStr))
 
     archiveBaseName = "desktermial_bundled"
     destinationDirectory.set(layout.buildDirectory.dir(distDir))
@@ -65,7 +69,7 @@ tasks.register<Zip>("zipBundledDist") {
 tasks.register<Zip>("zipDist") {
     group = distGroup
 
-    from(layout.buildDirectory.dir(appName))
+    from(layout.buildDirectory.dir(launch4jStr))
 
     exclude("jre")
     archiveBaseName = "deskterminal_raw"
@@ -84,6 +88,7 @@ dependencies {
     implementation(libs.pty4j)
     implementation(libs.jna)
     implementation(libs.darklaf.core)
+    implementation(libs.mslinks)
     implementation(r4j.java)
 }
 
